Add an affordance to change the address of a freelancer
